# llm-c-and-go

./: .gitignore  pyproject.toml
llmc/: rand.h
llmgo/: go.mod
llmgo/internal/config/: gpt2.go
llmgo/internal/model/: gpt2.go  gpt2_test.go
